@@ -199,12 +199,12 @@ omxCheckCloseEnough(model[['test10b']]@result, A@values - t(B@values), 0.001)
 omxCheckCloseEnough(model[['test11']]@result, -A@values, 0.001)
 omxCheckCloseEnough(model[['test11a']]@result, -t(A@values), 0.001)
 omxCheckCloseEnough(model[['test11b']]@result, t(-A@values), 0.001)
-omxCheckCloseEnough(model[['test12']]@result, cbind(A@values, B@values), 0.001)
-omxCheckCloseEnough(model[['test12a']]@result, cbind(t(A@values), B@values), 0.001)
-omxCheckCloseEnough(model[['test12b']]@result, cbind(A@values, t(B@values)), 0.001)
-omxCheckCloseEnough(model[['test13']]@result, rbind(A@values, B@values), 0.001)
-omxCheckCloseEnough(model[['test13a']]@result, rbind(t(A@values), B@values), 0.001)
-omxCheckCloseEnough(model[['test13b']]@result, rbind(A@values, t(B@values)), 0.001)
+omxCheckCloseEnough(mxEval(test12, model), cbind(A@values, B@values), 0.001)
+omxCheckCloseEnough(mxEval(test12a, model), cbind(t(A@values), B@values), 0.001)
+omxCheckCloseEnough(mxEval(test12b, model), cbind(A@values, t(B@values)), 0.001)
+omxCheckCloseEnough(mxEval(test13, model), rbind(A@values, B@values), 0.001)
+omxCheckCloseEnough(mxEval(test13a, model), rbind(t(A@values), B@values), 0.001)
+omxCheckCloseEnough(mxEval(test13b, model), rbind(A@values, t(B@values)), 0.001)
 omxCheckCloseEnough(model[['test14']]@result, det(A@values), 0.001)
 omxCheckCloseEnough(model[['test14a']]@result, det(t(A@values)), 0.001)
 omxCheckCloseEnough(model[['test15']]@result, tr(A@values), 0.001)
