@@ -4,7 +4,8 @@ trunk
 * bugfix: preserve rownames when converting data.frame columns to numeric values
 * 'nrow' and 'ncol' arguments now supercede matrix dimensions in mxMatrix()
 * add boolean argument 'vector' to mxRAMObjective() for returning the vector of likelihoods
-* added demo(OneFactorModel_LikelihoodVector) as example of 'vector=TRUE' in RAM model 
+* added demo(OneFactorModel_LikelihoodVector) as example of 'vector=TRUE' in RAM model
+* cbind() and rbind() inside MxAlgebra expressions with all arguments as MxMatrix objects are themselves transformed into MxMatrix objects
 
 Release 0.4.1-1320 (June 12, 2010)
 ==================================
